# pethings

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
include/peutils/: runpe.h  tricks.h
programs/: CMakeLists.txt  newrunpe.c  runfile.c  runpe_export.c  sample.c
src/: CMakeLists.txt  runpe.c  tricks.c
